src/backend/joanie/core/templates/issuers/unicamp-degree.css
{% load i18n %}
{% load static %}
{% load extra_tags %}

{% get_current_language as LANGUAGE_CODE %}

/* == Custom fonts configuration */
@font-face {
  font-family: "Barlow";
  font-style: normal;
  font-weight: 400;
  src: url("{% static "joanie/fonts/barlow/400.woff2" %}") format("woff2");
}

@font-face {
  font-family: "Barlow";
  font-style: italic;
  font-weight: 400;
  src: url("{% static "joanie/fonts/barlow/400-italic.woff2" %}") format("woff2");
}

@font-face {
  font-family: "Barlow";
  font-style: normal;
  font-weight: 600;
  src: url("{% static "joanie/fonts/barlow/600.woff2" %}") format("woff2");
}

@font-face {
  font-family: "Barlow";
  font-style: normal;
  font-weight: 700;
  src: url("{% static "joanie/fonts/barlow/700.woff2" %}") format("woff2");
}

@font-face {
  font-family: "Barlow";
  font-style: normal;
  font-weight: 800;
  src: url("{% static "joanie/fonts/barlow/800.woff2" %}") format("woff2");
}

/* == Global properties */
:root {
  --padding-top: 50mm;
  --padding-left: 90mm;
  --padding-right: 7mm;
  --padding-bottom: 5mm;
  --color-neutral-100: #FFF;
  --color-neutral-500: #6D6E70;
  --color-neutral-800: #221F1F;
  --color-neutral-900: #000;
  --color-accent: #0071BB;
  {% if LANGUAGE_CODE == "fr-fr" %} --document-bg: url("{% base64_static "joanie/images/unicamp_degree_bg_decorator_fr.png" %}");
  {% else %} --document-bg: url("{% base64_static "joanie/images/unicamp_degree_bg_decorator_en.png" %}");
  {% endif %}
}

/* == Print configuration*/

@media print {
  @page {
    size: A4 landscape;
    margin: 0;
    padding-top: var(--padding-top);
    padding-left: var(--padding-left);
    padding-right: var(--padding-right);
    padding-bottom: var(--padding-bottom);
  }
}

/* == Global */
* {
  margin: 0;
  padding: 0;
}

h1, h2, h3, h4, h5, h6 {
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
}

html {
  background-color: var(--color-neutral-100);
  background-image: var(--document-bg);
  background-size: auto 100%;
  background-repeat: no-repeat;
  box-sizing: border-box;
}

body {
  font-family: "Barlow", sans-serif;
  position: relative;
  color: var(--color-neutral-800);
}

/* Debug */
.debug:before,
.debug:after {
  --grid-color: #994FFF;
  bottom: -10mm;
  background: linear-gradient(to left, var(--grid-color) 0%, var(--grid-color) 2%, transparent 4%, transparent 100%), linear-gradient(to top, var(--grid-color) 0%, var(--grid-color) 2%, transparent 4%, transparent 100%);
  content: "";
  display: block;
  left: -90mm;
  position: fixed;
  right: -17mm;
  top: -50mm;
  z-index: -1;
}

.debug * {
  background-color: #994FFF19;
}

.debug:after {
  background-size: 10mm 10mm;
  opacity: 0.5;
}

.debug:before {
  background-size: 5mm 5mm;
  opacity: 0.25;
}

/* == Utils */
.page-break {
  page-break-after: always;
}

.flex-column {
  display: flex;
  flex-direction: column;
}

.flex-row {
  display: flex;
  flex-direction: row;
}

.fw-400 { font-weight: 400; }
.fw-600 { font-weight: 600; }
.fw-700 { font-weight: 700; }
.fw-800 { font-weight: 800; }
.fs-italic { font-style: italic; }

.text-spaced {
  text-transform: uppercase;
  letter-spacing: 1.4mm;
}

/* == Header */
.header-title {
  box-sizing: border-box;
  color: var(--color-neutral-100);
  display: block;
  font-size: 42.5pt;
  font-weight: 800;
  height: 297mm;
  left: -46.5mm; /* 50% - padding-left -> 5((297-210) * 0.5) - 90mm */
  margin: 0;
  padding-top: 12.4mm;
  position: fixed;
  text-align: center;
  text-transform: uppercase;
  top: -93.5mm; /* -50% - padding-top -> ((297-210) * -0.5) - 50mm */
  transform: rotate(-90deg);
  vertical-align: top;
  width: 210mm;
}

.header {
  left: 0;
  position: fixed;
  right: 0;
  top: -50mm;
  padding-top: 9mm;
}

.header-logos {
  align-items: center;
  display: flex;
  justify-content: space-between;
  width: 100%;
}

.logo-unicamp {
  width: 77mm;
}

.logo-organization {
  aspect-ratio: 1/1;
  height: 22.3mm;
  object-fit: contain;
  object-position: center;
  width: 45mm;
}

/* == Content */
.content {
  display: flex;
  flex-direction: column;
  height: 162mm;
  margin-top: -7mm;
}

.content-object {
  color: var(--color-neutral-500);
  font-size: 17pt;
}

.student-name {
  color: var(--color-neutral-800);
  font-size: 32pt;
  font-weight: 700;
}

.course-name {
  color: var(--color-accent);
  font-size: 26pt;
  font-weight: 700;
  line-height: 1;
}

.content-issueDate {
  color: var(--color-neutral-800);
  font-size: 15pt;
  padding-top: 5mm;
}

.course-details__persons {
  flex: 1 0 auto;
  align-items: flex-start;
  margin-bottom: 5.2mm;
}

/* == Course details */
.course-details__wrapper {
  display: flex;
  flex-direction: row;
  flex: 1;
  margin-top: 8.7mm;
}

.course-details {
  display: flex;
  flex-direction: column;
  flex: 1;
  height: 100%;
}

.course-details__teachers {
  flex: 1;
  margin-top: 5mm;
}

.course-details__teachers .teacher:not(:last-child) {
  margin-bottom: 5mm;
}

.course-details__organization {
  color: var(--color-neutral-800);
  font-size: 17pt;
  font-weight: 700;
  margin-bottom: 7mm;
}

.course-details__teachers {
  color: var(--color-neutral-800);
  font-size: 13pt;
  justify-content: space-between;
  padding-right: 3mm;
}

.course-details__teachers + .course-details__signatory-wrapper {
  justify-content: flex-end;
}

.course-details__signatory-wrapper {
  display: flex;
  flex: 1;
}

.course-details__signatory {
  text-align: center;
}

.signatory__signature {
  height: 15mm;
  margin-top: 2mm;
  object-fit: contain;
  object-position: center;
  width: 35mm;
}

.signatory__identity > em {
  display: block;
  font-size: 10pt;
}

/* == Course details rest */
.course-details__rest {
  align-items: flex-end;
  justify-content: space-between;
}

/* == Certification level */
.certification-level__wrapper {
  display: flex;
  margin-bottom: 6mm;
}

.certification-level {
  align-items: center;
  border: var(--color-neutral-500) 1.7pt solid;
  box-sizing: border-box;
  color: var(--color-neutral-500);
  display: flex;
  flex-direction: row;
  font-size: 8.1pt;
  font-weight: bold;
  justify-content: space-between;
  justify-self: flex-start;
  align-self: flex-start;
  padding: 0 4mm;
  text-align: right;
}

.certification-level > p {
  text-align: right;
  display: block;
  padding-right: 2mm;
  width: 20mm;
}

.certification-level > strong {
  display: block;
  font-size: 22.4pt;
}

/* == European credits */
.european-credits {
  display: flex;
  flex-direction: row;
  font-size: 7pt;
}

.european-credits > img {
  margin-right: 6.2mm;
  height: 7.9mm;
}

.european-credits > p {
  max-width: 50ch;
}

/* Platform credits */
.platform-credits__wrapper {
  display: flex;
  flex-direction: column;
  height: 100%;
  justify-content: flex-end;
}

.platform-credits {
  font-size: 7pt;
  padding-left: 15mm;
  width: 52.3mm;
}
.platform-credits > p > strong {
  font-size: 11pt;
  font-weight: 700;
  color: var(--color-accent);
  text-transform: uppercase;
}

.platform-credits > img {
  align-self: flex-end;
  margin-bottom: 0;
  margin-left: -4mm; /* Avoid the margin of the image */
  margin-top: 2.5mm;
  width: 39.7mm;
}

/* == Skills */

.skills {
  display: block;
  height: 100%;
  width: 100%;
}

.skills header {
  color: var(--color-neutral-800);
  font-size: 15pt;
  margin-bottom: 12.7mm;
}

.skills header strong {
  display: block;
  font-size: 17pt;
  font-weight: 800;
  text-transform: uppercase;
}

.skills-list {
  column-count: 2;
  column-fill: auto;
  column-width: 8em;
  gap: 11.5mm;
  list-style-position: outside;
  padding-left: 10pt;
}

.skills-list li {
  font-size: 12px;
  margin-bottom: 3mm;
  position: relative;
}

.skills-list li::marker {
  font-size: 20pt;
  line-height: 7pt;
}

